--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,11 +1,9 @@
 name: fijkplayer_example
 description: Demonstrates how to use the fijkplayer plugin.
 publish_to: 'none'
-
-version: 1.0.0+1
-
+version: 0.8.5
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
