--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: fijkplayer
 description: A Video Player Flutter plugin based on ijkplayer, support most popular protocols and codecs
+version: 0.8.7
 homepage: https://fijkplayer.befovy.com
 repository: https://github.com/befovy/fijkplayer
 issue_tracker: https://github.com/befovy/fijkplayer/issues
 
-version: 1.0.0+1
-
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
